fix: fixed contact section overlap

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -431,11 +431,10 @@ border-bottom:2px solid #f1f1f1;
     background-color: rgb(54, 83, 212);
     background-attachment: fixed;
     background-position: center;
+    background-size: cover;
     background-repeat: no-repeat;
-    background-size: fill;
-    min-height: 100vh;
-    width: 100vw;
-    position: relative;
+    min-height: 1000px;
+    position: relative;    
 }
 
 .contact-heading {
@@ -445,15 +444,13 @@ border-bottom:2px solid #f1f1f1;
 }
 
 .contact-box {
-    min-height: 60vh;
-    min-width: 30vw;
-    max-width: 60vw;
+    width: 80vw;
     background-color: rgba(102, 102, 102, 0.473);
     border-radius: 20px;
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -42%);
+    transform: translate(-50%, -50%);
     padding: 20px;
 }
 
@@ -469,9 +466,7 @@ border-bottom:2px solid #f1f1f1;
     color: #FF9671;
     font-weight: bold;
     font-size: large;
-    text-align: right;
     margin: 10px 0 10px 0;
-    text-align: left;
 }
 
 .input-field {
@@ -515,21 +510,13 @@ border-bottom:2px solid #f1f1f1;
 .contact-input button:focus {
     color: #845EC2;
 }
-/* 
-@media screen and (min-width:360px) {
-    .contact-heading {
-        margin-top: 100px;
-    }
+
+@media screen and (max-width:360px) {
     .contact-box {
-        max-width: 90vw;
-        height: 600px;
-        margin-top: 150px;
+        min-width: 80vw;
+        margin-top: 120px;
     }
-    .input-field {
-        width: 100%;
-        margin: 0;
-    }
-} */
+}
 
 /* Footer */
 
